--- a/src/app/components/list-products/list-products.component.html
+++ b/src/app/components/list-products/list-products.component.html
@@ -1,1 +1,11 @@
-<p>list-products works!</p>
+<div class="flex">
+  <div class="flex-1"></div>
+  <div
+    class="flex-6 flex flex-col md:flex-row justify-center items-center mt-4"
+  >
+    @for (product of products; track $index) {
+    <app-card-product [product]="product"></app-card-product>
+    }
+  </div>
+  <div class="flex-1"></div>
+</div>
