--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -10,7 +10,7 @@
         <ul class="hidden md:flex space-x-4">
           <li class="px-1"><a [routerLink]="['/']">Inicio</a></li>
           <li class="px-1">
-            <a [routerLink]="['products/', 'imanes']">Imanes</a>
+            <a [routerLink]="['products/', 'Imanes']">Imanes</a>
           </li>
           <li class="px-1">
             <a [routerLink]="['products/', 'llaveros']">Llaveros</a>
