--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -13,21 +13,21 @@
             <a [routerLink]="['products/', 'Imanes']">Imanes</a>
           </li>
           <li class="px-1">
-            <a [routerLink]="['products/', 'llaveros']">Llaveros</a>
+            <a [routerLink]="['products/', 'Llaveros']">Llaveros</a>
           </li>
           <li class="px-1">
-            <a [routerLink]="['products/', 'portaLlaves']">Porta Llaves</a>
+            <a [routerLink]="['products/', 'PortaLlaves']">Porta Llaves</a>
           </li>
           <li class="px-1">
-            <a [routerLink]="['products/', 'toppers']">Adornos para Tortas</a>
+            <a [routerLink]="['products/', 'Toppers']">Adornos para Tortas</a>
           </li>
           <li class="px-1">
-            <a [routerLink]="['products/', 'toppersCupcakes']"
+            <a [routerLink]="['products/', 'ToppersCupcakes']"
               >Adornos para Cupcakes</a
             >
           </li>
           <li class="px-1">
-            <a [routerLink]="['products/', 'navidad']">Navidad</a>
+            <a [routerLink]="['products/', 'Navidad']">Navidad</a>
           </li>
         </ul>
       </div>
