--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,32 +1,33 @@
 <div
-  class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
+  [routerLink]="['product/', product._id]"
+  class="w-60 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
 >
-  <a [routerLink]="['product/', 'product']">
+  <a [routerLink]="['product/', product._id]">
     <img src="{{ product.images[0] }}" alt="product image" />
   </a>
   <div class="px-5 pb-5">
     <a [routerLink]="['product/', 'product']">
       <h5
-        class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
+        class="text-xl font-semibold tracking-tight min-h-16 text-gray-900 dark:text-white text-center"
       >
         {{ product.nombre }}
       </h5>
     </a>
     <div class="flex items-center mt-2.5 mb-5">
       <span
-        class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded-sm dark:bg-blue-200 dark:text-blue-800 ms-3"
+        class="bg-blue-100 line-clamp-4 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded-sm dark:bg-blue-200 dark:text-blue-800 ms-3"
         >{{ product.descripcion }}</span
       >
     </div>
-    <div class="flex items-center justify-between">
-      <span class="text-3xl font-bold text-gray-900 dark:text-white">{{
-        product.precio
-      }}</span>
-      <a
-        href="#"
+    <div class="flex items-center justify-center">
+      <span class="text-3xl font-bold text-gray-900 dark:text-white text-center"
+        >${{ product.precio }}</span
+      >
+      <!-- <a
+        [routerLink]="['product/', product._id]"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         >Ver Mas</a
-      >
+      > -->
     </div>
   </div>
 </div>
