--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="flex justify-center items-center w-32">
-        <span>STORE</span>
+        <input placeholder="buscar..." type="text" /> <button>Buscar</button>
       </div>
     </div>
 
