--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -31,59 +31,64 @@
           </li>
         </ul>
       </div>
-
-      <div class="flex justify-center items-center w-32">
+      <div class="flex justify-center items-center space-x-2">
         <input
-          placeholder="buscar..."
-          (keyup.enter)="buscar()"
-          [(ngModel)]="buscarInput"
           type="text"
+          placeholder="Buscar"
+          [(ngModel)]="buscarInput"
+          class="border rounded px-2 py-1"
         />
-        <button (click)="buscar()">Buscar</button>
+        <button
+          type="button"
+          (click)="buscar()"
+          class="bg-blue-500 text-white px-3 py-1 rounded"
+        >
+          Buscar
+        </button>
       </div>
+
+      <div class="flex-1"></div>
     </div>
 
-    <div class="flex-1"></div>
-  </div>
+    <!-- MOBILE MENU  -->
 
-  <!-- MOBILE MENU  -->
+    <!-- OVERLAY -->
+    <div
+      id="overlay"
+      class="fixed inset-0 bg-gray-200 bg-opacity-80 z-40 hidden md:hidden"
+    ></div>
+    <!-- OVERLAY END -->
 
-  <!-- OVERLAY -->
-  <div
-    id="overlay"
-    class="fixed inset-0 bg-gray-200 bg-opacity-80 z-40 hidden md:hidden"
-  ></div>
-  <!-- OVERLAY END -->
+    <button id="menu-btn" class="p-3 z-60 fixed md:hidden">
+      <svg
+        class="w-6 h-6"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16"
+        ></path>
+      </svg>
+    </button>
 
-  <button id="menu-btn" class="p-3 z-60 fixed md:hidden">
-    <svg
-      class="w-6 h-6"
-      fill="none"
-      stroke="currentColor"
-      viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg"
+    <div
+      id="menu"
+      class="md:hidden z-50 hs-overlay duration-300 ease-in border-gray-200 -translate-x-full fixed top-0 left-0 h-full w-64 bg-white shadow-lg"
     >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M4 6h16M4 12h16M4 18h16"
-      ></path>
-    </svg>
-  </button>
+      <div class="relative flex flex-col h-full">
+        <div class="pl-4 flex justify-between items-center">
+          <span class="font-semibold text-xl ml-8 pt-2 text-black">logo</span>
+        </div>
 
-  <div
-    id="menu"
-    class="md:hidden z-50 hs-overlay duration-300 ease-in border-gray-200 -translate-x-full fixed top-0 left-0 h-full w-64 bg-white shadow-lg"
-  >
-    <div class="relative flex flex-col h-full">
-      <div class="pl-4 flex justify-between items-center">
-        <span class="font-semibold text-xl ml-8 pt-2 text-black">logo</span>
+        <ul class="space-y-1 p-4">
+          <li class="py-2">Dashboard</li>
+        </ul>
       </div>
-
-      <ul class="space-y-1 p-4">
-        <li class="py-2">Dashboard</li>
-      </ul>
     </div>
   </div>
 
