--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,54 +1,3 @@
-<!-- <div
-  class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
->
-  <img [src]="product.images[0]" alt="product image" width="120" />
-
-  <div class="px-5 pb-5">
-    <a [routerLink]="['/product']">
-      <h5
-        class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"
-      >
-        {{ product.nombre }}
-      </h5>
-    </a>
-    <div class="flex items-center mt-2.5 mb-5">
-      <div class="flex items-center space-x-1 rtl:space-x-reverse">
-        {{ product.descripcion }}
-      </div>
-    </div>
-
-    <div class="flex items-center mt-2.5 mb-5">
-      <span> Categoria : {{ product.categoria }} </span>
-    </div>
-
-    <div class="flex items-center mt-2.5 mb-5">
-      <span> Tamano : {{ product.tamano }} </span>
-    </div>
-
-    <div class="flex items-center mt-2.5 mb-5">
-      <span> Colores : {{ product.colores }} </span>
-    </div>
-
-    <div class="flex items-center justify-between">
-      <span class="text-3xl font-bold text-gray-900 dark:text-white"
-        >${{ product.precio }}
-      </span>
-      <a
-        [routerLink]="['product/', product._id]"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-      >
-        Editar Producto
-      </a>
-      <button
-        (click)="delete(product._id)"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-      >
-        Eliminar Producto
-      </button>
-    </div>
-  </div>
-</div> -->
-
 <div
   class="w-60 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
 >
@@ -56,7 +5,7 @@
     @if(product.images){
     <img src="{{ product.images[0] }}" alt="product image" />
     }@else{
-    <img src="img/1.jpg" alt="product image" />
+    <img src="img/1.png" alt="product image" />
     <!-- cambiar imagen por defecto -->
     }
   </a>
