--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -32,53 +32,53 @@
         </button>
       </div>
     </div>
-
-    <!-- MOBILE MENU  -->
-
-    <!-- OVERLAY -->
-    <div
-      id="overlay"
-      class="fixed inset-0 bg-gray-200 bg-opacity-80 z-40 hidden md:hidden"
-    ></div>
-    <!-- OVERLAY END -->
-
-    <button id="menu-btn" class="p-3 z-60 fixed md:hidden">
-      <svg
-        class="w-6 h-6"
-        fill="none"
-        stroke="currentColor"
-        viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M4 6h16M4 12h16M4 18h16"
-        ></path>
-      </svg>
-    </button>
-
-    <div
-      id="menu"
-      class="md:hidden z-50 hs-overlay duration-300 ease-in border-gray-200 -translate-x-full fixed top-0 left-0 h-full w-64 bg-white shadow-lg"
-    >
-      <div class="relative flex flex-col h-full">
-        <div class="pl-4 flex justify-between items-center">
-          <span class="font-semibold text-xl ml-8 pt-2 text-black">logo</span>
-        </div>
-
-        <ul class="space-y-1 p-4">
-          <li class="py-2">Dashboard</li>
-          <!-- @for (item of categories; track $index) {
-          <li class="py-2">
-            <a [routerLink]="['products/', item.nombre]">{{ item.nombre }}</a>
-          </li>
-          } -->
-        </ul>
-      </div>
-    </div>
   </div>
 
-  <!-- END MOBILE MENU -->
+  <!-- MOBILE MENU  -->
+
+  <!-- OVERLAY -->
+  <div
+    id="overlay"
+    class="fixed inset-0 bg-gray-200 bg-opacity-80 z-40 hidden md:hidden"
+  ></div>
+  <!-- OVERLAY END -->
+
+  <button id="menu-btn" class="p-3 z-60 fixed md:hidden">
+    <svg
+      class="w-6 h-6"
+      fill="none"
+      stroke="currentColor"
+      viewBox="0 0 24 24"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M4 6h16M4 12h16M4 18h16"
+      ></path>
+    </svg>
+  </button>
+
+  <div
+    id="menu"
+    class="md:hidden z-50 hs-overlay duration-300 ease-in border-gray-200 -translate-x-full fixed top-0 left-0 h-full w-64 bg-white shadow-lg"
+  >
+    <div class="relative flex flex-col h-full">
+      <div class="pl-4 flex justify-between items-center">
+        <span class="font-semibold text-xl ml-8 pt-2 text-black">logo</span>
+      </div>
+      <ul class="space-y-1 p-4">
+        <li (click)="closeMenu()" class="py-2">
+          <a [routerLink]="['/']">Inicio</a>
+        </li>
+
+        @for (item of categories; track $index) {
+        <li class="py-2" (click)="closeMenu()">
+          <a [routerLink]="['products/', item.nombre]">{{ item.nombre }}</a>
+        </li>
+        }
+      </ul>
+    </div>
+  </div>
 </nav>
