--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,32 +1,44 @@
-<div
-  class="w-60 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
->
-  <a [routerLink]="['/product', product._id]">
-    @if(product.images){
-    <img src="{{ product.images[0] }}" alt="product image" />
-    }@else{
-    <img src="img/1.png" alt="product image" />
-    <!-- cambiar imagen por defecto -->
-    }
-  </a>
-  <div class="px-5 pb-5">
-    <a [routerLink]="['/product', product._id]">
+<a class="w-full h-full" [routerLink]="['/product', product._id]">
+  <div
+    class="max-w-60 w-60 bg-white border border-gray-200 dark:bg-gray-800 dark:border-gray-700 p-4 rounded-xl shadow-md hover:shadow-xl transition duration-300 flex flex-col justify-between"
+  >
+    <!-- Imagen -->
+    <div
+      class="w-52 h-52 bg-yellow-50 flex items-center justify-center mx-auto rounded-lg overflow-hidden"
+    >
+      <img
+        class="w-full h-full object-cover rounded-md contrast-125 hover:contrast-150 brightness-105 hover:brightness-110 transition duration-300"
+        [src]="product.images?.[0] || 'img/1.png'"
+        alt="product image"
+      />
+    </div>
+
+    <!-- Contenido -->
+    <div class="flex flex-col flex-grow justify-between mt-4 space-y-2">
+      <!-- Título -->
       <h5
-        class="text-xl font-semibold tracking-tight min-h-16 text-gray-900 dark:text-white text-center"
+        class="text-lg font-bold tracking-tight text-gray-900 dark:text-white text-center line-clamp-2"
       >
         {{ product.nombre }}
       </h5>
-    </a>
-    <div class="flex items-center mt-2.5 mb-5">
-      <span
-        class="bg-blue-100 line-clamp-4 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded-sm dark:bg-blue-200 dark:text-blue-800 ms-3"
-        >{{ product.descripcion }}</span
-      >
-    </div>
-    <div class="flex items-center justify-center">
-      <span class="text-3xl font-bold text-gray-900 dark:text-white text-center"
-        >${{ product.precio }}</span
-      >
+
+      <!-- Descripción -->
+      <div class="flex items-center justify-center">
+        <span
+          class="bg-yellow-100 text-yellow-800 text-sm font-medium px-3 py-1 rounded-full text-center truncate max-w-full"
+        >
+          {{ product.descripcion }}
+        </span>
+      </div>
+
+      <!-- Precio -->
+      <div class="flex items-center justify-center mt-auto">
+        <span
+          class="text-2xl font-extrabold text-yellow-600 dark:text-yellow-400 text-center"
+        >
+          ${{ product.precio }}
+        </span>
+      </div>
     </div>
   </div>
-</div>
+</a>
