--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -4,7 +4,19 @@
   <!-- Desktop Menu -->
   <div class="hidden md:flex w-full justify-between items-center">
     <!-- Logo -->
-    <div class="text-2xl font-bold text-yellow-600">STORE</div>
+    <div class="text-2xl font-bold text-yellow-600">
+      <a
+        (click)="closeMenu()"
+        [routerLink]="['/']"
+        class="inline-block hover:scale-105 hover:opacity-90 transition duration-300 ease-in-out"
+      >
+        <img
+          src="img/Noctura Logo.svg"
+          alt="Logo Noctura"
+          class="w-24 h-auto p-2"
+        />
+      </a>
+    </div>
 
     <!-- Navigation Links -->
     <ul class="flex space-x-6 text-gray-700 font-medium">
@@ -80,7 +92,18 @@
         <div
           class="flex items-center justify-between px-6 py-4 border-b border-gray-200"
         >
-          <span class="text-xl font-bold text-yellow-600">STORE</span>
+          <a
+            (click)="closeMenu()"
+            [routerLink]="['/']"
+            class="text-xl font-bold text-yellow-600 inline-block"
+          >
+            <img
+              src="img/Noctura Logo.svg"
+              alt="Logo Noctura"
+              class="w-24 h-auto"
+            />
+          </a>
+
           <button
             (click)="closeMenu()"
             class="text-gray-500 hover:text-yellow-600 transition"
