--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -65,7 +65,7 @@
 
 <!-- VISTA MOBILE -->
 <div
-  class="md:hidden border border-gray-200 rounded-xl shadow-md bg-white m-2 p-2"
+  class="md:hidden border border-gray-200 rounded-xl shadow-md bg-white mx-2 p-2"
 >
   <div class="flex flex-col space-y-4">
     <div class="bg-yellow-50 rounded-xl p-4">
@@ -95,7 +95,7 @@
       }
     </div>
 
-    <div class="text-center space-y-2">
+    <div class="text-center mb-6">
       <h1 class="text-2xl font-bold text-gray-900">{{ product.nombre }}</h1>
       <h3 class="text-xl text-yellow-600 font-semibold">
         $ {{ product.precio }}
