--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -47,6 +47,18 @@
         Colores disponibles: {{ product.colores }}
       </div>
 
+      <div class="flex justify-center flex-col items-center mb-8">
+        <h1 class="text-xl font-bold text-gray-900">Ubicación de retiro</h1>
+        <iframe
+          width="600"
+          height="200"
+          style="border: 0"
+          src="https://www.google.com/maps?q=-27.380316, -55.940174&hl=es&z=16&output=embed"
+          allowfullscreen
+          loading="lazy"
+        ></iframe>
+      </div>
+
       <div class="flex justify-center items-center text-center">
         <a
           class="mt-6 min-w-3/5 bg-yellow-500 text-white font-semibold py-2 px-6 rounded-md hover:bg-yellow-600 transition w-fit"
@@ -105,6 +117,17 @@
         Colores disponibles: {{ product.colores }}
       </div>
 
+      <div class="flex justify-center flex-col items-center mb-8">
+        <h1 class="text-xl font-bold text-gray-900">Ubicación de retiro</h1>
+        <iframe
+          width="200"
+          height="200"
+          style="border: 0"
+          src="https://www.google.com/maps?q=-27.380316, -55.940174&hl=es&z=16&output=embed"
+          allowfullscreen
+          loading="lazy"
+        ></iframe>
+      </div>
       <a
         class="bg-yellow-500 text-white font-semibold py-2 px-6 rounded-md hover:bg-yellow-600 transition"
         target="_blank"
