--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -48,7 +48,10 @@
       </div>
 
       <div class="flex justify-center flex-col items-center mb-8">
-        <h1 class="text-xl font-bold text-gray-900">Ubicación de retiro</h1>
+        <h1 class="text-xl font-bold text-gray-900">
+          Todos los productos se realizan a pedido con una seña del 50% del
+          valor del producto,Ubicación de retiro
+        </h1>
         <iframe
           width="600"
           height="200"
